[package]
name = "ezsockets"
version = "0.5.1"
edition = "2021"
authors = ["Jiangkun QIU <qjk2001@gmail.com>"]
description = "WebSockets server & client made easy"
readme = "README.md"
repository = "https://github.com/qiujiangkun/ezsockets"
license = "MIT"
keywords = ["websocket", "networking", "async"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
base64 = "0.21.4"
futures = "0.3.28"
http = "0.2.9"
tokio = { version = "1.33.0", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1.37"
url = "2.4.1"
cfg-if = "1.0.0"

tokio-tungstenite = { version = "0.20.1", optional = true }
tokio-rustls = { version = "0.24.0", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
eyre = "0.6.8"

[features]
default = ["tungstenite"]

tungstenite = ["tokio-tungstenite"]

tls = []
native-tls = ["tls", "tokio-native-tls", "tokio-tungstenite/native-tls"]
rustls = ["tls", "tokio-rustls", "tokio-tungstenite/rustls-tls-webpki-roots"]

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = "0.3.17"
criterion = "0.5.1"
rand = "0.8.5"

[package.metadata.docs.rs]
# document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "examples/echo-server"
]


[[test]]
name = "tungstenite"
required-features = ["tungstenite"]


[[bench]]
name = "my_benchmark"
harness = false
